--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A Q interface for https://github.com/mranney/node_redis",
   "main": "index.js",
   "dependencies": {
+    "hiredis": "^0.5.0",
     "q": "~1.0.1",
-    "redis": "~0.10.3",
-    "hiredis": "~0.1.16"
+    "redis": "^0.10.3"
   },
   "devDependencies": {},
   "scripts": {
